--- a/SolidPlanner/app/src/main/res/layout/activity_user.xml
+++ b/SolidPlanner/app/src/main/res/layout/activity_user.xml
@@ -30,6 +30,15 @@
             android:layout_width="match_parent"
             android:layout_height="50dp" />
 
+        <CalendarView
+            android:id="@+id/calendar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
+
         <Button
             android:id="@+id/logout"
             android:layout_width="match_parent"
