Cambios en registro y corrección de error en cerrar sesión

--- a/SolidPlanner/app/src/main/res/layout/activity_log_in.xml
+++ b/SolidPlanner/app/src/main/res/layout/activity_log_in.xml
@@ -19,29 +19,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/email"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/email"
-            android:inputType="textPersonName"
-            android:minHeight="48dp" />
+            android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/password"
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:drawablePadding="10dp"
+                android:hint="@string/email"
+                android:inputType="textPersonName"
+                android:drawableStart="@drawable/ic_correo"
+                android:minHeight="48dp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:minHeight="48dp" />
+            android:layout_marginTop="10dp"
+            app:passwordToggleEnabled="true">
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:drawablePadding="10dp"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:drawableStart="@drawable/ic_password"
+                android:minHeight="48dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/SignIn2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="LogIn"
-            android:text="@string/login" />
+            android:text="@string/login"
+            android:layout_marginTop="15dp"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
