--- a/SolidPlanner/app/src/main/res/layout/activity_main.xml
+++ b/SolidPlanner/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,22 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="350dp"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="96dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="100dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.29"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <Button
@@ -32,10 +33,12 @@
                 android:onClick="InlogIn"
                 android:text="@string/login" />
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/SignIn"
