Avance Sprint 3. Añadir notas

--- a/SolidPlanner/app/src/main/res/layout/activity_user.xml
+++ b/SolidPlanner/app/src/main/res/layout/activity_user.xml
@@ -40,10 +40,23 @@
             android:layout_height="50dp" />
 
         <Button
+            android:id="@+id/addButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/addEvent"
+            tools:ignore="UsingOnClickInXml" />
+
+        <Button
+            android:id="@+id/showButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/showEvents"
+            tools:ignore="UsingOnClickInXml" />
+
+        <Button
             android:id="@+id/logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="LogOut"
             android:text="@string/logout"
             tools:ignore="UsingOnClickInXml" />
     </LinearLayout>
