--- a/SolidPlanner/app/src/main/res/layout/activity_add_event.xml
+++ b/SolidPlanner/app/src/main/res/layout/activity_add_event.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddEventActivity">
+    tools:context=".AddEvents.AddEventActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
@@ -19,54 +19,86 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/nameEvent"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/nameEvent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins"
+                android:hint="@string/titulo"
+                android:textStyle="bold" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/descriptionEvent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/poppins"
+                android:hint="@string/descripcion"
+                android:minHeight="150dp"
+                android:textStyle="bold" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Nombre del evento"></EditText>
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/descriptionEvent"
-            android:layout_width="match_parent"
+            <Button
+                android:id="@+id/Btn_Calendario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_calendario"
+                app:icon="@drawable/ic_baseline_calendar_today_24" />
+
+            <TextView
+                android:id="@+id/Fecha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:fontFamily="@font/poppins"
+                android:hint="@string/fecha"
+                android:textSize="20sp" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Descripción del evento"></EditText>
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/beginDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Desde:"></TextView>
+            <Button
+                android:id="@+id/Btn_Hora"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_hora"
+                app:icon="@drawable/ic_hora" />
 
-        <EditText
-            android:id="@+id/beginEvent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></EditText>
+            <TextView
+                android:id="@+id/Hora"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:fontFamily="@font/poppins"
+                android:hint="@string/hora"
+                android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/beginHour"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></EditText>
-
-        <TextView
-            android:id="@+id/endDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hasta:"></TextView>
-
-        <EditText
-            android:id="@+id/endEvent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></EditText>
-
-        <EditText
-            android:id="@+id/endHour"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></EditText>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="100dp">
 
             <Button
                 android:id="@+id/addButton"
